--- a/Upload/app/config/routing.yml
+++ b/Upload/app/config/routing.yml
@@ -38,3 +38,8 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+_demo_chart:
+        resource: "@SaadTaziGChartBundle/Resources/config/routing.yml"
+        type:     yaml
+        prefix:   /gchart
