--- a/Upload/composer.json
+++ b/Upload/composer.json
@@ -23,7 +23,8 @@
         "imagine/imagine": "~0.5.0",
         "knplabs/knp-menu-bundle": "~2.0",
         "friendsofsymfony/user-bundle": "dev-master",
-        "knplabs/knp-paginator-bundle": "~2.4"
+        "knplabs/knp-paginator-bundle": "~2.4",
+        "saad-tazi/g-chart-bundle": "~1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
