--- a/Upload/src/JCV/UploadBundle/Resources/config/routing/upload.yml
+++ b/Upload/src/JCV/UploadBundle/Resources/config/routing/upload.yml
@@ -31,6 +31,12 @@ upload_edit:
     requirements:
         id:   \d*
 
+upload_activity_edit:
+    path:     /{id}/editActivity
+    defaults: { _controller: "JCVUploadBundle:Upload:editActivity" }
+    requirements:
+        id:   \d*
+
 upload_persist:
     path:     /{id}/persist
     defaults: { _controller: "JCVUploadBundle:Upload:persist" }
